src/objects/ObjectE__c.object
<CustomObject>
    <fields>
        <fullName>ObjectD__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ObjectD</label>
        <referenceTo>ObjectD__c</referenceTo>
        <relationshipLabel>ObjectE</relationshipLabel>
        <relationshipName>ObjectE</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ObjectE2__c</fullName>
        <label>ObjectE2</label>
        <referenceTo>ObjectB__c</referenceTo>
        <relationshipLabel>ObjectE</relationshipLabel>
        <relationshipName>ObjectE</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>StandardObject2__c</fullName>
        <label>StandardObject2</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>ObjectE</relationshipLabel>
        <relationshipName>ObjectE</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>ObjectE</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>ObjectE Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ObjectE</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>